[gd_scene load_steps=9 format=2]

[ext_resource path="res://Chainsaw/Chainsaw.png" type="Texture" id=1]
[ext_resource path="res://Chainsaw/Chainsaw.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.2

[sub_resource type="CircleShape2D" id=2]
radius = 9.05539

[sub_resource type="CapsuleShape2D" id=3]
radius = 14.0
height = 26.0

[sub_resource type="Animation" id=4]
length = 0.264
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.066, 0.132, 0.198 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 40, 154, 30, 72 ), Rect2( 40, 81, 31, 72 ), Rect2( 71, 156, 30, 72 ), Rect2( 72, 83, 31, 72 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.066, 0.132, 0.198 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ), Vector2( -0.5, 6 ), Vector2( 0, 6 ), Vector2( -0.5, 6 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.264
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.066, 0.132, 0.198 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 45, 0, 41, 80 ), Rect2( 0, 80, 39, 79 ), Rect2( 87, 0, 38, 82 ), Rect2( 0, 0, 44, 79 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.066, 0.132, 0.198 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1.5, 2 ), Vector2( 0.5, 3.5 ), Vector2( 0, 2 ), Vector2( 2, 1.5 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 104, 83, 28, 69 ), Rect2( 104, 153, 28, 69 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 7.5 ), Vector2( -1, 7.5 ) ]
}

[node name="Chainsaw" type="RigidBody2D"]
collision_layer = 2
mass = 500.0
physics_material_override = SubResource( 1 )
gravity_scale = 8.0
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
sleeping = true
script = ExtResource( 2 )
LAUNCH_GRAV = 5

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -6 )
texture = ExtResource( 1 )
offset = Vector2( -1, 7.5 )
region_enabled = true
region_rect = Rect2( 104, 83, 28, 69 )

[node name="PhysicsCollider" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -8 )
shape = SubResource( 3 )

[node name="MouseCast" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( 0, 15 )
collide_with_bodies = false

[node name="LaunchCast" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( 0, -15 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false
update_scale = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fast = SubResource( 4 )
anims/HyperSpeed = SubResource( 5 )
anims/Slow = SubResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Chainsaw_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
